styled chat col and setting col

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #36393e
+      }
+    </style>
     <title>Dark Carnival</title>
   </head>
   <body>
