removed chat engine borders in settings

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #36393e
+        background-color: #36393e;
       }
     </style>
     <title>Dark Carnival</title>
