--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         background-color: #36393e;
       }
     </style>
-    <title>Dark Carnival</title>
+    <title>Fakecord</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
